<resources>
    <string name="app_name">Frota Viva</string>
    <string name="logo_content_description">Logo de caminhao azul</string>
    <string name="login_title">Realize o login</string>
    <string name="email_input">Email</string>
    <string name="name_input">Nome</string>
    <string name="birthday_input">Data de Nascimento</string>
    <string name="car_plate_input">Placa do Carro</string>
    <string name="enterprise_code_input">Código da Empresa</string>
    <string name="password_input">Senha</string>
    <string name="confirm_password_input">Confirmar Senha</string>
    <string name="acessar_button">Acessar</string>
    <string name="login_button">Login</string>
    <string name="account_question">Ainda não tem uma conta?</string>
    <string name="account_login_register">Cadastre-se</string>
    <string name="driver_register">Cadastro Caminhoneiro</string>
    <string name="button_continue">Continuar</string>
    <string name="button_goBack">Voltar</string>
    <string name="collaborator_display">Colaborador:</string>
    <string name="car_display">Carro:</string>
    <string name="car_plate_display">Placa:</string>
    <string name="loading_display">Carregando..</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="permission_denied">Permissão de localização negada.</string>
    <string name="location_not_available">Localização não disponível.</string>
    <string name="location_failed">Falha ao obter localização.</string>
    <string name="location_unknown">Atualmente em: Localização desconhecida</string>
    <string name="service_error">Atualmente em: Erro de serviço (Rede/Geocoding)</string>
    <string name="unknown_error">Atualmente em: Erro desconhecido de Geocoding</string>
    <string name="currently_at">Atualmente em: %1$s</string>
    <string name="marker_title">Localização Atual da Frota</string>
    <string name="update_location_button">Botão de atualização de localização</string>
    <string name="data_not_found">Não foram encontrados dados</string>
    <string name="loading_error">Houve um erro no carregamento</string>
    <string name="no_active_route">nenhuma rota ativa foi encontrada!</string>
    <string name="no_meters">Os medidores nao foram encontrados!</string>
    <string name="unauthenticated">Usuário nao autenticado</string>
    <string name="navigation_drawer_open">Abrido</string>
    <string name="navigation_drawer_close">Fechado</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>