<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <ImageView
        android:id="@+id/logo_azul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="144dp"
        android:contentDescription="Logo de caminhao azul"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_azul" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/login_title"
        android:textColor="@color/primary_default"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo_azul" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginHorizontal="52dp"
        android:layout_marginTop="32dp"
        android:autofillHints="@string/app_name"
        android:background="@drawable/rounded_edittext_background"
        android:hint="@string/email_input"
        android:inputType="textEmailAddress"
        android:paddingStart="16dp"
        android:paddingTop="16dp"
        android:paddingEnd="16dp"
        android:paddingBottom="16dp"
        android:textColor="@color/primary_default"
        android:textColorHint="#999999"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView" />

    <EditText
        android:id="@+id/editTextConfirmPassword"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginHorizontal="52dp"
        android:layout_marginTop="16dp"
        android:autofillHints="@string/app_name"
        android:background="@drawable/rounded_edittext_background"
        android:hint="@string/password_input"
        android:inputType="textPassword"
        android:paddingStart="16dp"
        android:paddingTop="16dp"
        android:paddingEnd="16dp"
        android:paddingBottom="16dp"
        android:textColor="@color/primary_default"
        android:textColorHint="#999999"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextPassword" />

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginHorizontal="52dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/rounded_button_background"
        android:backgroundTint="@null"
        android:text="@string/acessar_button"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextConfirmPassword" />

    <TextView
        android:id="@+id/navigateToRegister2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="24dp"
        android:text="@string/account_login_register"
        android:textFontWeight="700"
        android:textSize="8sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.007"
        app:layout_constraintStart_toEndOf="@+id/navigateToRegister"
        app:layout_constraintTop_toBottomOf="@+id/buttonRegister" />

    <TextView
        android:id="@+id/navigateToRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="128dp"
        android:layout_marginTop="24dp"
        android:text="@string/account_question"
        android:textSize="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonRegister" />

</androidx.constraintlayout.widget.ConstraintLayout>
