<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">

    <ImageView
        android:id="@+id/logo_azul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="40dp"
        android:contentDescription="Logo de caminhao azul"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_azul" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/Inter_Bold"
        android:text="@string/account_login_register"
        android:textColor="@color/primary_default"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.19"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo_azul" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginHorizontal="52dp"
        android:layout_marginTop="32dp"
        android:autofillHints="@string/app_name"
        android:background="@drawable/rounded_edittext_background"
        android:hint="@string/name_input"
        android:inputType="textEmailAddress"
        android:paddingStart="16dp"
        android:paddingTop="16dp"
        android:paddingEnd="16dp"
        android:paddingBottom="16dp"
        android:textColor="@color/primary_default"
        android:textColorHint="#999999"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginHorizontal="52dp"
        android:layout_marginTop="24dp"
        android:autofillHints="@string/app_name"
        android:background="@drawable/rounded_edittext_background"
        android:hint="@string/email_input"
        android:inputType="textPassword"
        android:paddingStart="16dp"
        android:paddingTop="16dp"
        android:paddingEnd="16dp"
        android:paddingBottom="16dp"
        android:textColor="@color/primary_default"
        android:textColorHint="#999999"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextEmail" />

    <EditText
        android:id="@+id/editTextPassword3"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginHorizontal="52dp"
        android:layout_marginTop="24dp"
        android:autofillHints="@string/app_name"
        android:background="@drawable/rounded_edittext_background"
        android:hint="@string/birthday_input"
        android:inputType="textPassword"
        android:paddingStart="16dp"
        android:paddingTop="16dp"
        android:paddingEnd="16dp"
        android:paddingBottom="16dp"
        android:textColor="@color/primary_default"
        android:textColorHint="#999999"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

    <EditText
        android:id="@+id/editTextPassword5"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginHorizontal="52dp"
        android:layout_marginTop="24dp"
        android:autofillHints="@string/app_name"
        android:background="@drawable/rounded_edittext_background"
        android:hint="@string/enterprise_code_input"
        android:inputType="textPassword"
        android:paddingStart="16dp"
        android:paddingTop="16dp"
        android:paddingEnd="16dp"
        android:paddingBottom="16dp"
        android:textColor="@color/primary_default"
        android:textColorHint="#999999"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword6" />

    <EditText
        android:id="@+id/editTextPassword6"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginHorizontal="52dp"
        android:layout_marginTop="24dp"
        android:autofillHints="@string/app_name"
        android:background="@drawable/rounded_edittext_background"
        android:hint="@string/car_plate_input"
        android:inputType="textPassword"
        android:paddingStart="16dp"
        android:paddingTop="16dp"
        android:paddingEnd="16dp"
        android:paddingBottom="16dp"
        android:textColor="@color/primary_default"
        android:textColorHint="#999999"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword3" />

    <Button
        android:id="@+id/buttonContinue"
        android:layout_width="124dp"
        android:layout_height="40dp"
        android:layout_marginHorizontal="52dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="52dp"
        android:background="@drawable/rounded_button_background"
        android:backgroundTint="@null"
        android:text="@string/button_continue"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword5" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonNavigateLogin"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginHorizontal="52dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/rounded_secondary_button_background"
        android:backgroundTint="@null"
        android:elevation="6dp"
        android:text="@string/login_button"
        android:textColor="@android:color/system_neutral1_900"
        android:textSize="14sp"
        android:textStyle="bold"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toStartOf="@+id/buttonContinue"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword5" />


</androidx.constraintlayout.widget.ConstraintLayout>