<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterPassword">

    <ImageView
        android:id="@+id/logo_azul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/logo_content_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_azul" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/account_login_register"
        android:textColor="@color/primary_default"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/editTextPasswordRegister"
        app:layout_constraintTop_toBottomOf="@id/logo_azul" />

    <EditText
        android:id="@+id/editTextPasswordRegister"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginHorizontal="52dp"
        android:layout_marginTop="32dp"
        android:autofillHints="password"
        android:background="@drawable/rounded_edittext_background"
        android:hint="@string/password_input"
        android:inputType="textPassword"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColor="@color/primary_default"
        android:textColorHint="#999999"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView" />

    <EditText
        android:id="@+id/editTextConfirmPasswordRegister"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginHorizontal="52dp"
        android:layout_marginTop="16dp"
        android:autofillHints="password"
        android:background="@drawable/rounded_edittext_background"
        android:hint="@string/confirm_password_input"
        android:inputType="textPassword"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColor="@color/primary_default"
        android:textColorHint="#999999"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextPasswordRegister" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonGoBack"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/rounded_secondary_button_background"
        android:text="@string/button_goBack"
        android:textColor="@color/primary_default"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/buttonContinueRegister"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@+id/editTextConfirmPasswordRegister"
        app:layout_constraintTop_toBottomOf="@+id/editTextConfirmPasswordRegister"
        app:layout_constraintWidth_percent="0.3" />

    <Button
        android:id="@+id/buttonContinueRegister"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/rounded_button_background"
        android:text="@string/acessar_button"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="@+id/editTextConfirmPasswordRegister"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonGoBack"
        app:layout_constraintTop_toBottomOf="@+id/editTextConfirmPasswordRegister"
        app:layout_constraintWidth_percent="0.3" />


</androidx.constraintlayout.widget.ConstraintLayout>